#4810 formula editing box now has own auto scrollbar (TODO: fix X sign and its spacing maybe)
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@39340 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/geogebra/resources/css/mathquillggb.css
+++ b/web/src/geogebra/resources/css/mathquillggb.css
@@ -57,8 +57,8 @@
   	border: #6161FF solid 1px;
 	background: #FFFFFF;
 	padding: 4px 5px;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
+	box-sizing: border-box !important;
+	-moz-box-sizing: border-box !important;
 	box-shadow: inset 1px 1px rgba(102, 102, 102, 0.1);
 }
 .hasCursorPermanent > span {
